src/test/deca/extension/codegen/invalid/test_modification_dimension.ass
	ADDSP #3
; start main program
; -------------------------------------
;        Method Table
; -------------------------------------
	LOAD #null, R0
	STORE R0, 2(GB)
	LOAD code.Object.equals, R0
	STORE R0, 3(GB)
; -------------------------------------
;        Main program
; -------------------------------------
; Beginning of main instructions:
; --------StartNewTable--------[10, 14]-----
; [NewTable][loadItemintoRegister] loading NewTable  =  int[] into memory at register R2
	LOAD #10, R3	; loading 10 into memory
	LOAD R3, R1
	ADD #1, R1
	NEW R1, R0
	STORE R3, 0(R0)
	LOAD R0, R2
; --------EndNewTable--------[10, 14]-----
	STORE R2, 1(GB)	; Initializing the variable x and loading it into memory
; --------BeginAssignOp--------[11, 4]-----
	LOAD #5, R3	; loading 5 into memory
; --------EndAssignOp--------[11, 4]-----
	HALT
; -------------------------------------
;        Classes
; -------------------------------------
; -------------------------------------
;        Method equal
; -------------------------------------
; ------------------Start generateCodeForObjectEquals location:
code.Object.equals:
	LOAD -2(LB), R0
	CMP R1, R0
	SEQ R0	; Comparaison this et paramètre d'equals
fin.Object.equals:
	RTS
init.Object:
	RTS
; -------------------------------------
;        Liste Erreur
; -------------------------------------
stack_overflow_error:
	WSTR "Error: stack_overflow_error"
	WNL
	ERROR
; end main program
